# 1c-its-parser

./: constants.py  docs.py  main.py  news.py  pyproject.toml  schemas.py  utils.py
infostart/: constants.py  main.py
parser/: auth.py  constants.py  datastructures.py  settings.py  utils.py  worker.py
parser/modules/: db.py
