[project]
name = "1csitesparser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "html2text>=2025.4.15",
    "playwright>=1.55.0",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]
